--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header>
       <h1>Guess My Number!</h1>
       <div class="btns">
-        <button class="btn uz">UZ</button>
-        <button class="btn eng">EN</button>
+        <button class="btn uzbek">UZ</button>
+        <button class="btn english">EN</button>
       </div>
       <p class="between">(Between 1 and 20)</p>
       <button class="btn again">Again!</button>
